# talaris

./: .gitignore  Cargo.toml  README.md
benches/: binance_futures_live.rs  binance_live.rs  common.rs  e2e.rs  framing.rs  ingress.rs  live_compare.rs  live_pipeline.rs  live_redundancy.rs  live_ws_latency.rs  local_compare.rs  local_pipeline.rs  local_redundancy.rs  local_tuning.rs  pool_fanout.rs  pool_ws_echo.rs  proactor_overhead.rs  read.rs  tcp_echo.rs  ws_chunking.rs  ws_framing.rs  ws_ingress_fanout.rs  ws_ingress_json.rs  ws_ingress_raw.rs  ws_ingress_single.rs  ws_ingress_tls.rs
benches/common/: mod.rs
examples/: bench_vs_tokio.rs  quickstart.rs
reports/: tuning_control_surface_2026-06-02.md
src/: connection.rs  connection_state.rs  cursor_buf.rs  http.rs  lib.rs  observability.rs  pool.rs  proactor.rs  test_helpers.rs  tls.rs  ws.rs
src/proactor/: affinity.rs  buf_ring.rs  op.rs  socket.rs  stub.rs  uring.rs
src/ws/: client.rs  close.rs  frame.rs  handshake.rs  mask.rs  parser.rs
