[package]
name          = "talaris"
version       = "0.1.0"
edition       = "2024"
license       = "GPL-3.0-or-later"
authors       = ["fdranger <fdrangerhere@gmail.com>"]
rust-version  = "1.95"
publish       = true
description   = "Low-latency and predictable-latency, zero-jitter HFT data-pipeline transport: io_uring proactor + self-implemented WS/TLS/HTTP."
repository    = "https://github.com/fdrangersg/talaria"
homepage      = "https://github.com/fdrangersg/talaria"
documentation = "https://docs.rs/talaris"
readme        = "README.md"
keywords      = ["websocket", "io-uring", "tls", "network", "hft"]
categories    = ["network-programming", "asynchronous"]
# 关掉 benches/ 的 auto-discover —— 共享 helper 住 benches/common/mod.rs 不是 target；
# bench target 全部走下面的 [[bench]] 列表显式声明，方便配 `harness = false`。
autobenches   = false

[lib]
name = "talaris"
path = "src/lib.rs"

[dependencies]
thiserror    = "2"
ring         = "0.17"   # SystemRandom for Sec-WebSocket-Key
sha1         = "0.10"   # Sec-WebSocket-Accept
base64       = "0.22"
rustls       = "0.23"
webpki-roots = "0.26"
tracing      = "0.1"
# libc 提供 errno 常量（ENOBUFS / ECONNRESET 等）。跨平台 dep —— macOS 上仍可
# compile（stub 路径不会真用到 errno match），让 cargo check 在所有平台都能
# type-check Linux-only 的 connection_state / pool。
libc         = "0.2"

# hot-path proactor (Linux only — macOS 走 stub)
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[dev-dependencies]
# example / bench 用：per-handle latency 测量 + tokio 对照组
hdrhistogram = "7"
# benchmark 对照组。features 砍到只够单线程 TCP echo —— 不让 tokio 拉一堆
# 额外组件（fs / signal / process / sync 等）进 bench 二进制；这样比较更接近
# "tokio 的 IO 模型" 而非"tokio 的全家桶"。
tokio        = { version = "1", default-features = false, features = ["rt", "net", "io-util", "macros"] }

# ─── profiles ───────────────────────────────────────────────────────────
[profile.dev]
opt-level = 0
debug     = true

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
debug         = false

# 留给 perf / 火焰图：release 性能 + 调试符号
[profile.release-debug]
inherits = "release"
strip    = false
debug    = true

[profile.bench]
opt-level     = 3
lto           = "thin"
codegen-units = 1
debug         = true
strip         = false

# ─── bench targets ──────────────────────────────────────────────────────
# 全部 `harness = false`：自己写 fn main()，HdrHistogram + Instant 自己测时间，
# 不走 libtest #[bench] / criterion harness（criterion 的 sampling 在 < 100 ns
# 量级会被自身开销淹没；HFT 路径要更直接的工具）。
#
# 跑法：`taskset -c 0-7 cargo bench --bench <name> -- <args>`
# 单独 release build：`cargo build --release --bench <name>`，产物在
# `target/release/deps/<name>-<hash>`（带 hash，因为 dev-dep 不一样）。

[[bench]]
name    = "ws_framing"
harness = false

[[bench]]
name    = "ws_ingress_single"
harness = false

[[bench]]
name    = "ws_ingress_fanout"
harness = false

[[bench]]
name    = "ws_ingress_raw"
harness = false

[[bench]]
name    = "ws_ingress_tls"
harness = false

[[bench]]
name    = "binance_live"
harness = false

# ─── lints ──────────────────────────────────────────────────────────────
[lints.rust]
unsafe_op_in_unsafe_fn        = "warn"
unused_must_use               = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
all                      = { level = "warn", priority = -1 }
pedantic                 = { level = "warn", priority = -1 }
nursery                  = { level = "warn", priority = -1 }
unwrap_used              = "warn"
expect_used              = "warn"
indexing_slicing         = "warn"
use_self                 = "warn"
mem_forget               = "deny"
todo                     = "warn"
unimplemented            = "warn"
panic                    = "warn"
inline_always            = "allow"  # HFT hot path 自己控制 inline
cast_possible_truncation = "warn"
cast_sign_loss           = "warn"
