[package]
name          = "talaris"
version       = "0.5.0"
edition       = "2024"
license       = "GPL-3.0-or-later"
authors       = ["fdranger <fdrangerhere@gmail.com>"]
rust-version  = "1.95"
publish       = true
description   = "Low-latency HFT transport toolkit for Linux: io_uring proactor plus WebSocket/TLS/HTTP building blocks."
repository    = "https://github.com/fdrangersg/talaris"
homepage      = "https://github.com/fdrangersg/talaris"
documentation = "https://docs.rs/talaris"
readme        = "README.md"
keywords      = ["websocket", "io-uring", "tls", "network", "hft"]
categories    = ["network-programming", "asynchronous"]
exclude       = ["reports/**"]
# 关掉 benches/ 的 auto-discover —— 共享 helper 住 benches/common.rs 不是 target；
# bench target 全部走下面的 [[bench]] 列表显式声明，方便配 `harness = false`。
autobenches   = false

[lib]
name = "talaris"
path = "src/lib.rs"

[dependencies]
thiserror    = "2"
ring         = "0.17"   # SystemRandom for Sec-WebSocket-Key
sha1         = "0.10"   # Sec-WebSocket-Accept
base64       = "0.22"
rustls       = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
tracing      = "0.1"
hdrhistogram = "7"
# libc 提供 errno 常量（ENOBUFS / ECONNRESET 等）。跨平台 dep —— macOS 上仍可
# compile（stub 路径不会真用到 errno match），让 cargo check 在所有平台都能
# type-check Linux-only 的 connection_state / pool。
libc         = "0.2"

# hot-path proactor (Linux only — macOS 走 stub)
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[dev-dependencies]
# Strict local comparison bench only. TLS is intentionally out of scope there.
tungstenite = { version = "0.29", default-features = false, features = ["handshake"] }

# ─── profiles ───────────────────────────────────────────────────────────
[profile.dev]
opt-level = 0
debug     = true

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
debug         = false

# 留给 perf / 火焰图：release 性能 + 调试符号
[profile.release-debug]
inherits = "release"
strip    = false
debug    = true

[profile.bench]
opt-level     = 3
lto           = "thin"
codegen-units = 1
debug         = true
strip         = false

# ─── bench targets ──────────────────────────────────────────────────────
# 全部 `harness = false`：自己写 fn main()，避免把 Criterion / libtest 的
# sampling model 套到 io_uring long-lived receive loop 上。所有 bench 都只在
# Linux 上实际运行；非 Linux 只打印 skipped。
#
# 跑法：`taskset -c 0-7 cargo bench --bench <name> -- <args>`
# 单独 release build：`cargo build --release --bench <name>`，产物在
# `target/release/deps/<name>-<hash>`。

[[bench]]
name    = "local_pipeline"
harness = false

[[bench]]
name    = "local_compare"
harness = false

[[bench]]
name    = "local_tuning"
harness = false

[[bench]]
name    = "live_pipeline"
harness = false

[[bench]]
name    = "live_compare"
harness = false

[[bench]]
name    = "local_redundancy"
harness = false

[[bench]]
name    = "live_redundancy"
harness = false

# ─── lints ──────────────────────────────────────────────────────────────
[lints.rust]
unsafe_op_in_unsafe_fn        = "warn"
unused_must_use               = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
all                      = { level = "warn", priority = -1 }
pedantic                 = { level = "warn", priority = -1 }
nursery                  = { level = "warn", priority = -1 }
unwrap_used              = "warn"
expect_used              = "warn"
indexing_slicing         = "warn"
use_self                 = "warn"
mem_forget               = "deny"
todo                     = "warn"
unimplemented            = "warn"
panic                    = "warn"
inline_always            = "allow"  # HFT hot path 自己控制 inline
cast_possible_truncation = "warn"
cast_sign_loss           = "warn"
